# blogger

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  EDITORIAL.md  NOTES-FOR-CLAUDE-CODE.md  README.md  app.py  pyproject.toml
core/: index.py  models.py  render.py  store.py
posts/2026/: hello-world.md  het-schild-dat-niets-blokkeert.md  so-i-created-a-blog.md  the-audiobook-that-didnt-exist.md  tot-zover-het-anti-g7-protest.md
static/memes/: .gitkeep
surfaces/: api.py  cli.py  mcp_server.py  web.py
tests/: test_api.py  test_app.py  test_cli.py  test_index.py  test_mcp.py  test_models.py  test_render.py  test_scheduling.py  test_store.py  test_web.py
