[project]
name = "blog"
version = "0.1.0"
description = "A minimal, AI-native blogging application. Files are the source of truth."
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter",
    "markdown",
    "typer",
]

[project.scripts]
blog = "surfaces.cli:app"

[tool.pytest.ini_options]
pythonpath = ["."]
