[project]
name = "blog"
version = "0.1.0"
description = "A minimal, AI-native blogging application. Files are the source of truth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1",
    "typer>=0.15",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "mcp>=1.2",
    "py-yaml12>=0.1.0",
    "markdown-it-py>=4.2.0",
]

[project.scripts]
blog = "surfaces.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "surfaces"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
